# 106b-sp26-labs-starter

./: .gitmodules
project1/src/ros2_aruco/config/: aruco_parameters.yaml
project1/src/ros2_aruco/ros2_aruco/: aruco_node.py
project1/src/visual_servoing/: package.xml  setup.py
project1/src/visual_servoing/visual_servoing/: controller.py  main.py  trajectories.py
project2/src/: README.md  run_trajectory.py  trajectory_generator.py  trajplot.py
project2/src/paths/: path1.txt  path2.txt
project3/: .gitignore  README.md
project3/starter/: pyproject.toml
project3/starter/astar/: astar.py  run_sim.py
project3/starter/astar_dijkstra/: astar.py  run_sim.py  shortestpath.py
project3/starter/dijkstra/: shortestpath.py
project3/starter/optimization/: obstacles.py  plot_trajectory.py  run_planner.py  unicycle_planner.py
project3/starter/src/plannedcntrl/: package.xml  setup.cfg  setup.py
project3/starter/src/plannedcntrl/plannedcntrl/: turtlebot_control.py
project3/starter/utils/: load_map.py  map_utils.py  plot_path.py
project3/starter/utils/maps/: map1.txt  map2.txt
project4a/: AllegroHandEnv.py  grasp_synthesis.py  main.ipynb  multifingered_ik.py  pyproject.toml  utils.py
project4b/: .gitignore
project4b/allegro_hand_ros2/: LICENSE  README.md
project4b/allegro_hand_ros2/src/allegro_hand_controllers/: CMakeLists.txt  package.xml
project4b/allegro_hand_ros2/src/allegro_hand_controllers/launch/: allegro_hand.launch.py  allegro_viz.launch.py
project4b/allegro_hand_ros2/src/allegro_hand_controllers/pose/: README.md
project4b/allegro_hand_ros2/src/allegro_hand_controllers/scripts/: setup_can0.sh
project4b/allegro_hand_ros2/src/allegro_hand_controllers/src/: allegro_node.cpp  allegro_node.h  allegro_node_grasp.cpp  allegro_node_grasp.h
project4b/allegro_hand_ros2/src/allegro_hand_controllers/src/candrv/: candef.h  candrv.h
project4b/allegro_hand_ros2/src/allegro_hand_controllers/urdf/: allegro_hand_config.rviz  allegro_hand_description_left_A.urdf  allegro_hand_description_left_B.urdf  allegro_hand_description_right_A.urdf  allegro_hand_description_right_B.urdf
project4b/allegro_hand_ros2/src/allegro_hand_controllers/urdf/allegro_hand_description_right_B/: allegro_hand_description_right_B.usd
project4b/allegro_hand_ros2/src/allegro_hand_controllers/urdf/allegro_hand_description_right_B/configuration/: allegro_hand_description_right_B_physics.usd  allegro_hand_description_right_B_sensor.usd
project4b/allegro_hand_ros2/src/allegro_hand_driver/: CMakeLists.txt  package.xml
project4b/allegro_hand_ros2/src/allegro_hand_driver/include/allegro_hand_driver/: AllegroHandDrv.h
project4b/allegro_hand_ros2/src/allegro_hand_driver/src/: AllegroHandDrv.cpp
project4b/allegro_hand_ros2/src/allegro_hand_driver/src/candrv/: socket_can.cpp
project4b/allegro_hand_ros2/src/allegro_hand_gui/: CMakeLists.txt  package.xml
project4b/allegro_hand_ros2/src/allegro_hand_gui/include/allegro_hand_gui/: mainwindow.h
project4b/allegro_hand_ros2/src/allegro_hand_gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
project4b/allegro_hand_ros2/src/allegro_hand_isaacsim/: CMakeLists.txt  README.md  package.xml
project4b/allegro_hand_ros2/src/allegro_hand_isaacsim/asset/: policy.pt  policy_action_scale_1_6_model_7100.pt  policy_new_usd_ckpt_8050.pt
project4b/allegro_hand_ros2/src/allegro_hand_isaacsim/src/: policy_wrapper_real_world.py  sim2real.cpp  test_controller.py  test_joints.py  test_policy.py
project4b/allegro_hand_ros2/src/allegro_hand_isaacsim/usd/: AH_V5(4F).usd  AH_V5(4F)_REAL2SIM.usd  AH_V5(4F)_SIM2REAL.usd  SensorColorSub.py
project4b/allegro_hand_ros2/src/allegro_hand_keyboards/: package.xml
project4b/allegro_hand_ros2/src/allegro_hand_keyboards/src/: allegro_hand_keyboard.cpp
project4b/allegro_hand_ros2/src/allegro_hand_moveit/: .setup_assistant  CMakeLists.txt  package.xml
project4b/allegro_hand_ros2/src/allegro_hand_moveit/config/: allegro_hand.ros2_control.xacro  allegro_hand.srdf  allegro_hand_left_A.urdf.xacro  allegro_hand_left_B.urdf.xacro  allegro_hand_right_A.urdf.xacro  allegro_hand_right_B.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
project4b/allegro_hand_ros2/src/allegro_hand_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
project4b/allegro_hand_ros2/src/allegro_hand_moveit/src/: save_joint_angles.cpp
project4b/allegro_hand_ros2/src/bhand/: Makefile  package.xml
project4b/allegro_hand_ros2/src/bhand/include/bhand/: BHand.h
project4b/allegro_reorientation/scripts/: list_envs.py  random_agent.py  zero_agent.py
project4b/allegro_reorientation/scripts/rsl_rl/: export_torchscript_policy.py  infer_allegro_repose.py  infer_allegro_repose_wrapper.py  play.py  train.py
project4b/allegro_reorientation/setup/: create_distrobox.sh
project4b/allegro_reorientation/source/allegro_reorientation/: setup.py
project4b/allegro_reorientation/source/allegro_reorientation/allegro_reorientation/: __init__.py  ui_extension_example.py
project4b/allegro_reorientation/source/allegro_reorientation/config/: extension.toml
project4b/cube_rotation_ws/scripts/: calibrate_intrinsics.py  generate_aruco_marker.py  print_checkerboard.py  stream_aruco_transform.py  stream_camera.py
project4b/cube_rotation_ws/src/cro_estimation/: package.xml  setup.py
project4b/cube_rotation_ws/src/cro_estimation/assets/calibration/: c299_1080p_intrinsics_camera13.yaml  c299_1080p_intrinsics_camera14.yaml  cam_to_world.yaml
project4b/cube_rotation_ws/src/cro_estimation/cro_estimation/: cro_estimator.py
project4b/cube_rotation_ws/src/perseus_detector/: package.xml  setup.cfg  setup.py
project4b/cube_rotation_ws/src/perseus_detector/perseus_detector/: __init__.py
project4b/cube_rotation_ws/src/perseus_detector/resource/: perseus_detector
(+16 files in other folders)
