[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project3-starter"
version = "0.1.0"
description = "Project 3 Starter Code"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "numpy",
    "matplotlib",
    "casadi",
]
requires-python = ">=3.8"

[project.scripts]
run_astar_dijkstra = "astar_dijkstra.run_sim:main"
run_planner = "optimization.run_planner:main"

[tool.setuptools]
packages = ["astar_dijkstra", "optimization", "utils"]
