<?xml version="1.0"?>
<package format="3">
  <name>allegro_hand_isaacsim</name>
  <version>0.0.0</version>
  <description>The allegro_hand_isaacsim package</description>
  <maintainer email="sh-yang@wonikrobotics.com">hibo</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend> 
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

<export>                               
   <build_type>ament_cmake</build_type> 
</export> 
</package>
