<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cro_estimation</name>
  <version>0.0.1</version>
  <description>Minimal ROS2 cube pose estimation package using a single camera and Perseus.</description>
  <maintainer email="alberthli@caltech.edu">alberthli</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>perseus_detector</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
